# ml-learning

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: redactive.openapi.json
src/autodev-lionagi/: AutoDev_with_llama_autogen_assistant.ipynb
src/emilia/: 20240625_modyva_EmilIA_UserStories_rev1.docx  Copy_of_LayoutPDFReader_Demo.ipynb
src/phages/: config.toml  crewai.ipynb  notes.md  summarizing_llm.ipynb
src/phages/modules/: answer.py  config.toml  extractors.py  helpers.py  library.py  postprocessor.py  prompts.py  schema.py  search.py
src/phages/notebooks/: coreapi.ipynb  library.ipynb  llamaindex_chain.ipynb  phages.ipynb  pubmed_reader.ipynb  summarizing_llm_v2.ipynb  summarizing_llm_v3.ipynb  weaviate.ipynb
src/phages/tests/: test_library.py  test_node_post_processors.py
